[gd_scene load_steps=6 format=3 uid="uid://baqivl7ewnyrp"]

[ext_resource type="Script" uid="uid://dn3bn2bimcr5e" path="res://scripts/spinner.gd" id="1_i3bsr"]
[ext_resource type="AudioStream" uid="uid://bbjvgu74alokx" path="res://audio/807248__waymonds__whirling-flying-disc-toy.wav" id="2_78gc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkf07"]
size = Vector2(22, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_i3bsr"]
radius = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78gc6"]
size = Vector2(31, 4)

[node name="spinner" type="StaticBody2D"]
z_index = 2
z_as_relative = false
script = ExtResource("1_i3bsr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.16924527, 0.1692453, 0.16924527, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.26293245, 0.26293245, 0.26293245, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jkf07")

[node name="spinner" type="Node2D" parent="."]

[node name="spinner1" type="Node2D" parent="spinner"]

[node name="leftSpinner" type="ColorRect" parent="spinner/spinner1"]
offset_top = -2.0
offset_right = 30.0
offset_bottom = 2.0
color = Color(0.29586652, 0.2958665, 0.2958665, 1)

[node name="ColorRect" type="ColorRect" parent="spinner/spinner1/leftSpinner"]
z_index = -1
layout_mode = 0
offset_left = 28.0
offset_top = -3.0
offset_right = 40.0
offset_bottom = 1.0
color = Color(0.14044744, 0.14044744, 0.14044744, 1)

[node name="ColorRect" type="ColorRect" parent="spinner/spinner1/leftSpinner/ColorRect"]
z_index = -1
layout_mode = 0
offset_left = -13.0
offset_right = -1.0
offset_bottom = 4.0
color = Color(0.14044744, 0.14044744, 0.14044744, 1)

[node name="RigidBody2D" type="RigidBody2D" parent="spinner/spinner1"]
position = Vector2(46, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="spinner/spinner1/RigidBody2D"]
position = Vector2(-19, 0)
shape = SubResource("CircleShape2D_i3bsr")

[node name="damager" type="Area2D" parent="spinner/spinner1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spinner/spinner1/damager"]
position = Vector2(22.5, -2)
shape = SubResource("RectangleShape2D_78gc6")

[node name="spinnoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_78gc6")
volume_db = 2.0
autoplay = true
max_distance = 500.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, -10)
angular_velocity_min = -103.92
angular_velocity_max = 163.3
scale_amount_max = 2.0
color = Color(0.099985994, 0.09998601, 0.099985965, 1)

[connection signal="body_entered" from="spinner/spinner1/damager" to="." method="_on_damager_body_entered"]
[connection signal="finished" from="spinnoise" to="." method="_on_spinnoise_finished"]
